[package]
name = "bitwarden-pin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hkdf = "0.12.3"
hmac = { version = "0.12.1", features = ["std"] }
pbkdf2 = "0.11.0"
rand_core = { version = "0.6.4", features = ["std"] }
rayon = "1.6.1"
serde_json = "1.0.91"
sha2 = "0.10.6"
